layer.conf: Add LAYERSERIES compatibility information

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,3 +8,5 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "webstuff"
 BBFILE_PATTERN_webstuff := "^${LAYERDIR}/"
 BBFILE_PRIORITY_webstuff = "4"
+
+LAYERSERIES_COMPAT_webstuff = "rocko sumo"
