layer.conf: Indicate dunfell compatibility

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_COLLECTIONS += "webstuff"
 BBFILE_PATTERN_webstuff := "^${LAYERDIR}/"
 BBFILE_PRIORITY_webstuff = "4"
 
-LAYERSERIES_COMPAT_webstuff = "zeus rocko sumo thud warrior"
+LAYERSERIES_COMPAT_webstuff = "dunfell zeus rocko sumo thud warrior"
